# FreeHouse-TRV-1.0

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.next  start-openocd  trv-1.0.ino
cad/: Base.stl  Case.stl  Fixing.stl  Freehouse TRV1 (Printable components) v11.f3z  Link Nut.stl
common/captiveportal/: wifi-captiveportal.cpp
common/gpio/: gpio.cpp
hardware/3D/: Base.3mf  Base.stl  Case.stl
hardware/3D-Stubby-TRV1r1/: Base.step  Batt+ve.step  Case.step  Fixing.step  Link Nut.step
hardware/3D-Stubby-TRV1r2/: Base.step  Batt+ve.step  Case.step  Fixing.step
hardware/F-TRV1-Rev2/: BOM_FreeHouse TRV 2.0_PCB_2025-04-27.xlsx  PickAndPlace_PCB_2025-04-27.xlsx
hardware/TRAV1-CR123-r1-p15/: Base.step  Case.step  Fixing.step  Link Nut.step
hardware/TRV1-3B/: Bambu Project.3mf  Base.step  Case.step  Fixing-outer.step  Link Nut-outer.step  Motor retainer.step  Plunger.step
hardware/TRV1-3D/: Bambu Project.3mf  Base.step  Batt clip.step  Batt holder.step  Case.step  Fixing-outer.step  Link Nut-outer.step  Motor clip.step  Motor housing.step  Plunger Nut v1.step  Plunger.step  Plungers x6.3mf
hardware/TRV1-3F/: Base.step  Batt holder.step  Case.step  Fixing-outer.step  Link Nut-outer.step  Motor clip.step  Motor housing.step  Plunger-2.3mm.step  (+5 more)
main/: CMakeLists.txt  build_info.c  helpers.h  idf_component.yml  main.cpp  pins.h  trv.h  update_build_info.sh
main/common/captiveportal/: dns_server.c  ota.c  wifi-captiveportal.cpp  wifi-captiveportal.h
main/common/gpio/: gpio.cpp
main/net/: esp-now.cpp  esp-now.hpp
main/src/: BatteryMonitor.cpp  BatteryMonitor.h  CaptiveWifi.cpp  CaptiveWifi.h  MotorController.cpp  MotorController.h  NetMsg.cpp  NetMsg.h  TouchButton.hpp  WithTask.cpp  WithTask.h  WithTask.hpp  ZigbeeTRV.cpp  board.cpp  board.h  fs.cpp  fs.h  mcu_temp.c  mcu_temp.cpp  mcu_temp.h  mcu_temp.hpp  pwm.c  pwm.h  trv-state.cpp  trv-state.h  update.cpp  wifi-sta.cpp  wifi-sta.hpp
main/src/DallasOneWire/: DallasOneWire.cpp  DallasOneWire.h  onewire.h  ow_init.c  ow_read.c  ow_reset.c  ow_romsearch.c  ow_send.c
src/: BatteryMonitor.cpp  BatteryMonitor.h  CaptiveWifi.cpp  CaptiveWifi.h  MotorController.cpp  MotorController.h  WithTask.cpp  WithTask.h  ZigbeeTRV.cpp  ZigbeeTRV.h  help.h  trv-state.cpp  trv-state.h
(+63 files in other folders)
